# fastapi-skel

./: Dockerfile  LICENSE  README.md  docker-compose.yml  docker.env  local.env  pyproject.toml  requirements.txt
skel/: main.py  scripts.py
